# mona-backend

./: .env.example  README.md  pyproject.toml  pytest.ini
src/: main.py
src/components/: conditional_router.py  direct_prompt_builder.py  document_cleaner.py  document_embedder.py  document_splitter.py  document_store.py  document_writer.py  documents_retriever.py  file_to_markdown_converter.py  llm_generator.py  markdown_to_document_converter.py  query_classifier.py  rag_prompt_builder.py  text_embedder.py
src/config/: settings.py
src/pipelines/indexing_mona/: pipeline.py  pipeline_wrapper.py
src/pipelines/mona/: pipeline.py  pipeline_wrapper.py
src/pipelines/retrieval_mona/: pipeline.py  pipeline_wrapper.py
src/routes/: documents.py  system.py
src/schemas/: classifier.py  document.py  system.py
src/services/: documents_service.py
tests/: main_test.py  system_test.py
tests/components/: conditional_router_test.py  direct_prompt_builder_test.py  document_cleaner_test.py  document_embedder_test.py  document_splitter_test.py  document_writter_test.py  documents_retriever_test.py  file_to_markdown_converter_test.py  llm_generator_test.py  markdown_to_document_test.py  query_classifier_test.py  rag_prompt_builder_test.py  text_embedder_test.py
tests/pipelines/: indexing_pipeline_test.py  indexing_pipeline_wrapper_test.py  mona_pipeline_test.py  mona_pipeline_wrapper_test.py  retrieval_pipeline_test.py  retrieval_pipeline_wrapper_test.py
tests/routes/: documents_test.py
tests/services/: documents_services_test.py
